--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
                     <div class="card-body p-0">
                         <!-- Nested Row within Card Body -->
                         <div class="row">
-                            <img src="/Users/rochigarciadelrio/Downloads/startbootstrap-sb-admin-2-gh-pages  2222/img/messi_gol_seleccixn_argentina.jpg_1213823801.jpg.webp" >
+                            <img src="/Users/rochigarciadelrio/Desktop/Front/img/1 2.png" >
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="text-center">
