--- a/perfilvendedor.html
+++ b/perfilvendedor.html
@@ -50,7 +50,7 @@
 
             <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="mensajes.html" 
+                <a class="nav-link collapsed" href="mensaje_Vendedor.html" 
                     aria-expanded="true">
                     <i class="fas fa-envelope fa-fw"></i>
                     <span>Mensajes</span>
@@ -264,10 +264,6 @@
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                 aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Stock
-                                </a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
@@ -285,64 +281,6 @@
                 <div class="container-fluid">
 
                  
-
-                    <!-- Content Row -->
-                    <div class="row">
-
-                        <!-- Earnings (Monthly) Card Example -->
-                        <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-primary shadow h-100 py-2">
-                                <div class="card-body">
-                                    <div class="row no-gutters align-items-center">
-                                        <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                                Ventas (Mes)</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">$40,000</div>
-                                        </div>
-                                        <div class="col-auto">
-                                            <i class="fas fa-calendar fa-2x text-gray-300"></i>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Earnings (Monthly) Card Example -->
-                        <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-success shadow h-100 py-2">
-                                <div class="card-body">
-                                    <div class="row no-gutters align-items-center">
-                                        <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                                Ventas (Año)</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">$215,000</div>
-                                        </div>
-                                        <div class="col-auto">
-                                            <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Earnings (Monthly) Card Example -->
-                        <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-info shadow h-100 py-2">
-                                <div class="card-body">
-                                    <div class="row no-gutters align-items-center">
-                                        <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                                Ventas (Semana)</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">$15,000</div>
-                                        </div>
-                                        <div class="col-auto">
-                                            <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
 
                <!-- Begin Page Content -->
                <div class="container-fluid">
@@ -362,11 +300,12 @@
                                 <thead>
                                     <tr>
                                         <th>Fecha</th>
-                                        <th>Orden de Compra</th>
+                                        <th>Operación</th>
                                         <th>Usuario</th>
                                         <th>Cantidad</th>
                                         <th>Total</th>
                                         <th>Estado</th>
+                                        <th>Chat</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -377,6 +316,7 @@
                                         <td>61</td>
                                         <td>$60,000</td>
                                         <td>Reservado</td>
+                                        <th><a class="btn btn-primary" href="mensaje_Vendedor.html">Contactar</a></th>
                                     </tr>
                                     <tr>
                                         <td>25/08/22</td>
@@ -385,6 +325,7 @@
                                         <td>1</td>
                                         <td>$3,000</td>
                                         <td>Reservado</td>
+                                        <th><a class="btn btn-primary" href="mensaje_Vendedor.html">Contactar</a></th>
                                     </tr>
                                     <tr>
                                         <td>23/10/22 09:10</td>
@@ -392,7 +333,7 @@
                                         <td>joacogdelr</td>
                                         <td>10</td>
                                         <td>$1,000</td>
-                                        <td>Reservado</td>
+                                        <td>Reservado</td><th><a class="btn btn-primary" href="mensaje_Vendedor.html">Contactar</a></th>
                                     </tr>
                                     <tr>
                                         <td>25/10/22 12:00</td>
@@ -401,6 +342,7 @@
                                         <td>12</td>
                                         <td>$12,000</td>
                                         <td>Pago</td>
+                                        <th><a class="btn btn-primary" href="mensaje_Vendedor.html">Contactar</a></th>
                                     </tr>
                                 </tbody>
                             </table>
