--- a/tables.html
+++ b/tables.html
@@ -53,7 +53,7 @@
 
             <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="mensajes.html" 
+                <a class="nav-link collapsed" href="mensaje_Vendedor.html" 
                     aria-expanded="true">
                     <i class="fas fa-envelope fa-fw"></i>
                     <span>Mensajes</span>
@@ -75,6 +75,7 @@
                     <i class="fas fa-fw fa-table"></i>
                     <span>Mis Reservas</span></a>
             </li>
+
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
@@ -308,7 +309,7 @@
                                     <thead>
                                         <tr>
                                             <th>Fecha</th>
-                                            <th>Orden de Compra</th>
+                                            <th>Operación</th>
                                             <th>Usuario</th>
                                             <th>Cantidad</th>
                                             <th>Total</th>
